# dcm4py

./: LICENSE  README.md  dcm4py.py  pyproject.toml  requirements.txt  test.py
LDCT_raw/full_1mm/L067/: L067_FD_1_1.CT.0001.0002.2015.12.22.18.09.40.840353.358074243.IMA  L067_FD_1_1.CT.0001.0003.2015.12.22.18.09.40.840353.358074267.IMA  L067_FD_1_1.CT.0001.0004.2015.12.22.18.09.40.840353.358074291.IMA  L067_FD_1_1.CT.0001.0005.2015.12.22.18.09.40.840353.358074315.IMA  L067_FD_1_1.CT.0001.0006.2015.12.22.18.09.40.840353.358074339.IMA  L067_FD_1_1.CT.0001.0007.2015.12.22.18.09.40.840353.358074363.IMA  L067_FD_1_1.CT.0001.0008.2015.12.22.18.09.40.840353.358074387.IMA  L067_FD_1_1.CT.0001.0009.2015.12.22.18.09.40.840353.358074411.IMA  L067_FD_1_1.CT.0001.0010.2015.12.22.18.09.40.840353.358074435.IMA  L067_FD_1_1.CT.0001.0011.2015.12.22.18.09.40.840353.358074459.IMA  L067_FD_1_1.CT.0001.0012.2015.12.22.18.09.40.840353.358074483.IMA  L067_FD_1_1.CT.0001.0013.2015.12.22.18.09.40.840353.358074507.IMA  L067_FD_1_1.CT.0001.0014.2015.12.22.18.09.40.840353.358074531.IMA  L067_FD_1_1.CT.0001.0015.2015.12.22.18.09.40.840353.358074555.IMA  L067_FD_1_1.CT.0001.0016.2015.12.22.18.09.40.840353.358074579.IMA  L067_FD_1_1.CT.0001.0017.2015.12.22.18.09.40.840353.358074603.IMA  L067_FD_1_1.CT.0001.0018.2015.12.22.18.09.40.840353.358074627.IMA  L067_FD_1_1.CT.0001.0019.2015.12.22.18.09.40.840353.358074651.IMA  L067_FD_1_1.CT.0001.0020.2015.12.22.18.09.40.840353.358074675.IMA  L067_FD_1_1.CT.0001.0021.2015.12.22.18.09.40.840353.358074699.IMA  (+531 more)
src/dcm4py/: __init__.py  dcm4py.py
(+560 files in other folders)
