[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dcm4py"
authors = [{name = "Anthony Zhang"}, { name="Mahmut Gokmen" }, { name = "Rabeya Sadia" }, { name = "Jin Chen" }]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
    "pydicom>=3.0.1",
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/AnthonZh/dcm4py"
Issues = "https://github.com/AnthonZh/dcm4py/issues"